--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
     <header>
         <nav class="navbar navbar-expand navbar-dark bg-dark mb-3">
             <div class="container">
-                <a class="navbar-brand" href="{% url 'pages:home' %}">Let's Roll</a>
+ <!--       <a class="navbar-brand" href="{% url 'pages:home' %}">Let's Roll</a>    -->
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
