Fichas salvas no banco de dados, correção de bug no carregamento da ficha

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,12 @@
                 {{user.username}}</p>
                
         </div>
+        <div class="col-md-12">
+            {% for item in value %}
+                <a href="">{{ item.name }} - race: {{ item.race }} class: {{ item.clas }}/level: {{ item.level }}</a>
+                <br>
+            {%endfor%}
+        </div>
     </div>
 </div>
 
