--- a/templates/home.html
+++ b/templates/home.html
@@ -27,14 +27,14 @@
                 {{user.username}}</p>
                
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12" style="">
             {% for item in value %}
                 <a href="">{{ item.name }} - race: {{ item.race }} class: {{ item.clas }}/level: {{ item.level }}</a>
                 <br>
             {%endfor%}
         </div>
     </div>
-</div>
+</div> 
 
 
 {% endblock %}
