--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
                 {{user.username}}</p>
                
         </div>
-        <div class="col-md-12" style="">
+        <div class="col-md-12">
             {% for item in value %}
                 <a href="">{{ item.name }} - race: {{ item.race }} class: {{ item.clas }}/level: {{ item.level }}</a>
                 <br>
