--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <div class="col-md-12">
     <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
         class="home-ground ">
-        <div style="justify-content: center; display: flex;" class="pt-3 col-md-12 bg-primary">
+        <div style=" background-color: #fff; justify-content: center; display: flex;" class="pt-3 col-md-12">
 
             <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);margin-right: 25px;" class="col-md-2">
                 <a style="text-decoration: none;margin-top: 50px; font-size: large; color: rgb(243, 243, 243); font-weight: 600;"
