--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,10 +5,17 @@
 {% block title %}Cadastro{% endblock %}
 
 {% block content %}
+<div class="col-md-12">
+    <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "class="home-ground ">
+        <div style=" background-color: rgb(236, 236, 236); justify-content: center; display: flex;" class="pt-3 col-md-12">
+
     <h2>Cadastro</h2>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-success" type="submit">Cadastrar</button>
     </form>
+    </div>
+    </div>
+</div>
 {% endblock %}
