--- a/templates/cria_ficha.html
+++ b/templates/cria_ficha.html
@@ -3,8 +3,13 @@
 {% block title %}Loja Python{% endblock %}  <!-- Muda o titulo da pagina -->
 
 {% block content %}
+
     <form action="" method="POST">
         {% csrf_token %}
+        <div class="col-md-12">
+            <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "class="home-ground ">
+                <div style=" background-color: rgb(236, 236, 236); justify-content: center; display: flex;" class="pt-3 col-md-12">
+        
         <h2>Build your Character</h2>
         <p></p>
         <div id="div_name">
@@ -17,6 +22,8 @@
     <script>
 
     </script>
-
+</div>
+</div>
+</div>
 
 {% endblock %}
