Recommit dos arquivos do carregamento das fichas

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,10 @@
         class="home-ground ">
         <div style=" background-color: rgb(236, 236, 236); justify-content: center; display: flex;" class="pt-3 col-md-12">
 
-            <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);margin-right: 25px;" class="col-md-2">
+          <!--  <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);margin-right: 25px;" class="col-md-2">
                 <a style="text-decoration: none;margin-top: 50px; font-size: large; color: rgb(243, 243, 243); font-weight: 600;"
                     class="" href="/ficha/">Ficha Teste</a>
-            </div>
+            </div> -->
 
             <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);" class="col-md-2">
                 <a style="text-decoration: none;margin-top: 50px; font-size: large;color: rgb(243, 243, 243);font-weight: 600"
