Correção do bug da url de chama das fichas

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md-12">
             {% for item in value %}
-                <a href="/ficha/{{ item.id }}">{{ item.name }} - race: {{ item.race }} class: {{ item.clas }}/level: {{ item.level }}</a>
+                <a href="/sheet/{{ item.id }}">{{ item.name }} - race: {{ item.race }} class: {{ item.clas }}/level: {{ item.level }}</a>
                 <br>
             {%endfor%}
         </div>
