Correção do bug da url de criação de ficha

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 
             <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);" class="col-md-2">
                 <a style="text-decoration: none;margin-top: 50px; font-size: large;color: rgb(243, 243, 243);font-weight: 600"
-                    href="/cria_ficha/">Criar nova ficha</a>
+                    href="/sheet_create/">Criar nova ficha</a>
             </div>
         </div>
             <div class="col-md-12">
@@ -35,6 +35,5 @@
         </div>
     </div>
 </div> 
-
 
 {% endblock %}
