--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,12 @@
         font-size: x-large;
         font-weight: bold;
     }
+
+   
+    .backgrounder {
+        background-color: white;
+    }
+
 </style>
     
 <head>
