--- a/templates/radio.html
+++ b/templates/radio.html
@@ -1,30 +1,64 @@
-{% extends 'base.html' %}                   <!-- Traz todo o conteudo de "base.html" pra ca -->
+{% extends 'base.html' %}
+<!-- Traz todo o conteudo de "base.html" pra ca -->
 
-{% block title %}Loja Python{% endblock %}  <!-- Muda o titulo da pagina -->
+{% block title %}Loja Python{% endblock %}
+<!-- Muda o titulo da pagina -->
 
 {% block content %}
-    <form action="" method="POST">
-        {% csrf_token %}
-        <h1 class='label-description'>Build your Character</h1>
-        <p></p>
-        <div id="div_radio" >
-            <h3 class='label-description'>{{ label }}</h3>
-            {% for item in value %}
-                <input type="radio" id="{{ item }}" name="{{ name }}" value= "{{ item }}" class='radios' onchange="change()">
-                <label  class='label-description' for="{{ item }}">{{ item }}</label>
-                <br>
-            {%endfor%}
-        </div>
-        <p></p>
-        <input type="submit" id="bt_next" disabled='true' value="Next">
-    </form>
 
-    <script>
-        function change(){
-            var radios = document.getElementsByClassName('radios')
-            for (key = 0; key < radios.length; key++){
-                if(document.getElementById(radios[key].id).checked) document.getElementById('bt_next').disabled = false
-            }
+<style>
+    .backgrounder {
+        background-color: rgb(196, 56, 56);
+        color: rgb(216, 83, 83);
+    }
+
+    .tituler{
+        padding: 20px 0px;
+    background-color: #d6445b;
+    }
+
+.label-description{
+
+    -webkit-text-stroke: 0.7px #4c51ff!important;
+    color: white;
+    font-family: "Papyrus",fantasy;
+    font-size: x-large;
+    font-weight: bold;
+    
+}
+
+</style>
+<form action="" method="POST">
+    {% csrf_token %}
+    <div class="col-md-12">
+        <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
+            class="home-ground ">
+            <div class="bg-w">
+            <h1 class='label-description tituler'>Build your Character</h1>
+            <p></p>
+        </div>
+            <div id="div_radio">
+                <h3 class='label-description'>{{ label }}</h3>
+                {% for item in value %}
+                <input type="radio" id="{{ item }}" name="{{ name }}" value="{{ item }}" class='radios'
+                    onchange="change()">
+                <label class='label-description' for="{{ item }}">{{ item }}</label>
+                <br>
+                {%endfor%}
+            </div>
+            <p></p>
+            <input type="submit" id="bt_next" disabled='true' value="Next">
+        
+    </div>
+    </div>
+</form>
+
+<script>
+    function change() {
+        var radios = document.getElementsByClassName('radios')
+        for (key = 0; key < radios.length; key++) {
+            if (document.getElementById(radios[key].id).checked) document.getElementById('bt_next').disabled = false
         }
-    </script>
+    }
+</script>
 {% endblock %}
