--- a/templates/sheet.html
+++ b/templates/sheet.html
@@ -65,6 +65,9 @@
             font-size: x-large;
             font-weight: bold;
         }
+        .backgrounder{
+            background-color: white;
+        }
     </style>
 
     <div class="row">
