--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <!-- Traz todo o conteudo de "base.html" pra ca -->
 
 
-{% block title %}Loja Python{% endblock %}
+{% block title %}Lets Roll{% endblock %}
 <!-- Muda o titulo da pagina -->
 
 
