Update Correto das coisas da Home

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
                
         </div>
         <div class="col-md-12">
-            <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px; padding-bottom: 50px;  "
+            <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px;  "
             class="home-ground ">
             {% for item in value %}
             
