Padronização de textos para o inglês

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,7 +2,7 @@
 {% load socialaccount %}
 {% providers_media_js %}
 {% load crispy_forms_tags %}                                            <!-- Carrega o crispy form para ser usado na pagina -->
-{% block title %}Entrar{% endblock %}                                   <!-- Titulo da pagina -->
+{% block title %}Enter{% endblock %}                                   <!-- Titulo da pagina -->
 
 {% block content %}
 <div class="col-md-12">
@@ -10,20 +10,20 @@
         <div style=" background-color: rgb(236, 236, 236); justify-content: center; display: flex;" class="pt-3 col-md-12">
 
 
-    <h2 class="col-md-4" style="color: rgb(107, 107, 107);">Entrar</h2>
+    <h2 class="col-md-4" style="color: rgb(107, 107, 107);">Enter</h2>
     <form method="post">                                                <!-- Formulário para logar -->
         {% csrf_token %}
         {{ form|crispy }}      
         <div col-md-12>
             <div class="col-md-12">
-                <button class="col-md-4 btn btn-success mr-5" type="submit">Entrar</button>   <!-- Botão de entrar -->
+                <button class="col-md-4 btn btn-success mr-5" type="submit">Enter</button>   <!-- Botão de entrar -->
     
-                <a class=" col-md-4 btn btn-warning" style="color: white;" href="/password_reset">Esqueceu a senha?</a>
+                <a class=" col-md-4 btn btn-warning" style="color: white;" href="/password_reset">Forgot your Password?</a>
                 </div>
     
             <div class="col-md-12">
-        <a class="col-md-4 mr-5 btn btn-primary " href="{% provider_login_url "facebook" method="js_sdk" %}"> Entrar com Facebook </a>
-        <a class="col-md-4 btn btn-danger" href="{% provider_login_url "google" %}"> Entrar com Google </a>
+        <a class="col-md-4 mr-5 btn btn-primary " href="{% provider_login_url "facebook" method="js_sdk" %}"> Login with Facebook </a>
+        <a class="col-md-4 btn btn-danger" href="{% provider_login_url "google" %}"> Login with Google </a>
             </div>
            
     </div>
