--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -16,7 +16,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <div class="col-md-12">
-        <button class="btn btn-success ml-5 col-md-4" type="submit">Cadastrar</button>
+        <button class="btn btn-success ml-5 col-md-4" type="submit">Create</button>
     </div>
     </form>
     </div>
