--- a/templates/home.html
+++ b/templates/home.html
@@ -19,14 +19,14 @@
 
             <div style="box-shadow: 1px 1px 5px rgb(221, 221, 221);border-radius: 3px; background-color: rgb(62, 185, 79);" class="col-md-2">
                 <a style="text-decoration: none;margin-top: 50px; font-size: large;color: rgb(243, 243, 243);font-weight: 600"
-                    href="/sheet_create/">Criar nova ficha</a>
+                    href="/sheet_create/">Create a New Character Sheet</a>
             </div>
         </div>
-            <div class="col-md-12">
+        <!--    <div class="col-md-12">
             <p style="color:white;margin-top: 50px;color: rgb(221, 7, 139);font-weight: 500"> Você entrou como:
                 {{user.username}}</p>
                
-        </div>
+        </div> -->
         <div class="col-md-12">
             <div style="background-color: rgb(236, 236, 236); border-radius: 3px; box-shadow: 1,1,1,1;text-align: center;margin-top: 50px;  "
             class="home-ground ">
@@ -44,6 +44,8 @@
             </div>
             {%endfor%}
             </div>
+
+
         </div>
     </div>
 </div> 
